# openmp_repaso

./: CMakeLists.txt  bordes.cpp  bordes.h  mediana.cpp  rotacion.cpp
